added typescript to project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <script src="./script/script.js" defer></script>
+    <script src="./dist/script.js" defer></script>
     <title>Contact List</title>
   </head>
   <body>
